@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Remove headers_rendered method, instead pass rendered status to error handlers
 
 0.013     2021-05-03 23:32:56 EDT
   - Skip tests that don't work on Windows
